--- a/translations/oe_corporate_blocks-it.po
+++ b/translations/oe_corporate_blocks-it.po
@@ -309,3 +309,6 @@ msgstr "https://ec.europa.eu/info/legal-notice_it"
 
 msgid "Council of the European Union"
 msgstr "Consiglio dell'Unione europea"
+
+msgid "Social media"
+msgstr "Social media"
