--- a/translations/oe_corporate_blocks-pt-pt.po
+++ b/translations/oe_corporate_blocks-pt-pt.po
@@ -309,3 +309,6 @@ msgstr "Comité das Regiões Europeu (CR)"
 
 msgid "Council of the European Union"
 msgstr "Conselho da União Europeia"
+
+msgid "Social media"
+msgstr "Redes sociais"
