--- a/translations/oe_corporate_blocks-sv.po
+++ b/translations/oe_corporate_blocks-sv.po
@@ -306,3 +306,6 @@ msgstr "https://ec.europa.eu/info/privacy-policy_sv"
 
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_sv"
+
+msgid "Social media"
+msgstr "Sociala medier"
