--- a/translations/oe_corporate_blocks-da.po
+++ b/translations/oe_corporate_blocks-da.po
@@ -306,3 +306,6 @@ msgstr "https://ec.europa.eu/info/privacy-policy_da"
 
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_da"
+
+msgid "Social media"
+msgstr "Sociale medier"
