--- a/translations/oe_corporate_blocks-es.po
+++ b/translations/oe_corporate_blocks-es.po
@@ -306,3 +306,6 @@ msgstr "https://ec.europa.eu/info/privacy-policy_es"
 
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_es"
+
+msgid "Social media"
+msgstr "Redes sociales"
