--- a/translations/oe_corporate_blocks-mt.po
+++ b/translations/oe_corporate_blocks-mt.po
@@ -306,3 +306,6 @@ msgstr "https://ec.europa.eu/info/privacy-policy_mt"
 
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_mt"
+
+msgid "Social media"
+msgstr "Media soċjali"
