--- a/translations/oe_corporate_blocks-pl.po
+++ b/translations/oe_corporate_blocks-pl.po
@@ -309,3 +309,6 @@ msgstr "https://ec.europa.eu/info/privacy-policy_pl"
 
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_pl"
+
+msgid "Social media"
+msgstr "Media społecznościowe"
