--- a/translations/oe_corporate_blocks-ro.po
+++ b/translations/oe_corporate_blocks-ro.po
@@ -309,3 +309,6 @@ msgstr "https://ec.europa.eu/info/privacy-policy_ro"
 
 msgid "https://ec.europa.eu/info/legal-notice_en"
 msgstr "https://ec.europa.eu/info/legal-notice_ro"
+
+msgid "Social media"
+msgstr "Rețele sociale"
